修复京东淘宝比价功能。

--- a/shadowrocket_diy.conf
+++ b/shadowrocket_diy.conf
@@ -44,10 +44,10 @@ FINAL,PROXY
 
 [Script]
 #京东历史价格
-京东比价 = type=http-response,requires-body=1,pattern=^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig),max-size=131072,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
+京东比价 = type=http-response,requires-body=1,pattern=^https?://api\.m\.jd\.com/client\.action\?functionId=(wareBusiness|serverConfig|basicConfig),max-size=1048576,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/jd_price.js
 #淘宝历史价格
-淘宝比价1 = type=http-request,requires-body=1,pattern=^http://.+/amdc/mobileDispatch,max-size=131072,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
-淘宝比价2 = type=http-response,requires-body=1,pattern=^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail,max-size=131072,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
+淘宝比价1 = type=http-request,requires-body=1,pattern=^http://.+/amdc/mobileDispatch,max-size=1048576,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
+淘宝比价2 = type=http-response,requires-body=1,pattern=^https?://trade-acs\.m\.taobao\.com/gw/mtop\.taobao\.detail\.getdetail,max-size=1048576,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/tb_price.js
 #微博去广告
 微博 = type=http-response,requires-body=1,pattern=^https?://(sdk|wb)app\.uve\.weibo\.com(/interface/sdk/sdkad.php|/wbapplua/wbpullad.lua),max-size=131072,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/wb_launch.js
 微博去广告 = type=http-response,requires-body=1,max-size=-1,pattern=^https?://m?api\.weibo\.c(n|om)/2/(statuses/(unread|extend|positives/get|(friends|video)(/|_)(mix)?timeline)|stories/(video_stream|home_list)|(groups|fangle)/timeline|profile/statuses|comments/build_comments|photo/recommend_list|service/picfeed|searchall|cardlist|page|!/photos/pic_recommend_status|video/tiny_stream_video_list|photo/info),max-size=131072,script-path=https://raw.githubusercontent.com/yichahucha/surge/master/wb_ad.js
