--- a/w37fhy_diy.conf
+++ b/w37fhy_diy.conf
@@ -121,8 +121,8 @@ https:\/\/cccat\.io url script-request-header https://raw.githubusercontent.com/
 
 # Chavy box (多账号Cookie保存切换)
 # 访问:  http://boxjs.com 管理
-^https?://boxjs.com/api url script-request-body https://gitee.com/chavyleung/scripts/raw/master/chavy.box.js
-^https?://boxjs.com(/home|/sub|/my|/app|/log|/revert)?($|\/) url script-echo-response https://gitee.com/chavyleung/scripts/raw/master/chavy.box.js
+#^https?://boxjs.com/api url script-request-body https://gitee.com/chavyleung/scripts/raw/master/chavy.box.js
+#^https?://boxjs.com(/home|/sub|/my|/app|/log|/revert)?($|\/) url script-echo-response https://gitee.com/chavyleung/scripts/raw/master/chavy.box.js
 
 [task_local]
 
