删除京东过去活动脚本及新增部分脚本

--- a/shadowrocket_diy.conf
+++ b/shadowrocket_diy.conf
@@ -64,13 +64,17 @@ FINAL,PROXY
 进店领豆 = type=cron,cronexpr="10 0 * * *",timeout=20,script-path=https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_shop.js, enable=true
 京小超 = type=cron,cronexpr="11 1-23/5 * * *",timeout=20,script-path=https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_superMarket.js, enable=true
 京小超领蓝币 = type=cron,cronexpr="11 0 * * *",timeout=20,script-path=https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_blueCoin.js, enable=true
-京东大赢家 = type=cron,cronexpr="5 9-22 * * *",timeout=100,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_bigWinner.js, enable=true
 京东白条 = type=cron,cronexpr="0 9 * * *",timeout=10,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_baiTiao.js, enable=true
-京东星推官 = type=cron,cronexpr="0 0 * * *",timeout=100,script-path=https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_xtg.js, enable=true
-京东全民营业领金币 = type=cron,cronexpr="20 * * * *",timeout=20,script-path=https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_collectProduceScore.js, enable=true
 京东全民开红包 = type=cron,cronexpr="9 0 * * *",timeout=20,script-path=https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_redPacket.js, enable=true
 京东摇京豆 = type=cron,cronexpr="5 0 * * *",timeout=20,script-path=https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_club_lottery.js, enable=true
-京东手机狂欢城 = type=cron,cronexpr="1 0-18/6 * * *",timeout=20,script-path=https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_818.js, enable=true
+京东抽奖机 = type=cron,cronexpr=11 0 * * *,timeout=20,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_lotteryMachine.js
+京东排行榜 = type=cron,cronexpr=11 9 * * *,timeout=20,script-path=https://raw.githubusercontent.com/yangtingxiao/QuantumultX/master/scripts/jd/jd_rankingList.js
+#在京东金融app内搜索摇钱树即可进入小游戏页面，然会选择提鹅小游戏,先参加一下这个活动，这是前提
+#在浏览直接访问https://jdde.jd.com/btyingxiao/marketing/html/index.html? 登录京东账户即可获取cookie
+京东金融提鹅 = type=cron,cronexpr=10 10 8 * * *,timeout=20,script-path=https://raw.githubusercontent.com/barrym-chen/Script/master/tie/tie_sign.js
+京东金融养猪 = type=cron,cronexpr=12 * * * *,timeout=20,script-path=https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_pigPet.js
+京东特权值 = type=cron,cronexpr=5 8 * * *,timeout=20,script-path=https://raw.githubusercontent.com/iisams/Scripts/master/liwo/jdtqz.js
+
 
 # 网易云音乐签到
 网易云获取Cookie = type=http-request,pattern=^https:\/\/music.163.com\/weapi\/user\/level,requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/chavyleung/scripts/master/neteasemusic/neteasemusic.cookie.js,script-update-interval=0
