--- a/loon_task.conf
+++ b/loon_task.conf
@@ -51,6 +51,8 @@ cron "1 0 0 * * *" script-path=https://raw.githubusercontent.com/lxk0301/jd_scri
 cron "2 0 * * *" script-path=https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_shop.js,tag=进店领豆
 # 摇京豆
 cron "2 0 * * *" script-path=https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_club_lottery.js,tag=摇京豆
+#全民开红包
+cron "1 1 * * *" script-path=https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_redPacket.js, tag=京东全民开红包
 #宠汪汪邀请助力与赛跑助力
 cron "15 10 * * *" script-path=https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_joy_run.js, tag=宠汪汪邀请助力与赛跑助力
 # 京东抽奖机
@@ -73,6 +75,10 @@ cron "5 8 * * *" script-path=https://raw.githubusercontent.com/iisams/Scripts/ma
 #打开爱奇艺App后(AppStore中国区)，点击"我的", 如通知成功获取cookie, 则可以使用此签到脚本.
 #获取Cookie后, 请将Cookie脚本禁用并移除主机名，以免产生不必要的MITM.
 cron "3 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/iQIYI-DailyBonus/iQIYI.js, tag=爱奇艺签到
+
+
+# 吾爱破解
+cron "5 0 * * *" script-path=https://raw.githubusercontent.com/NobyDa/Script/master/52pojie-DailyBonus/52pojie.js
 
 # bilibili
 #打开浏览器访问: https://www.bilibili.com 或 https://live.bilibili.com
