--- a/QuantumultX_diy.conf
+++ b/QuantumultX_diy.conf
@@ -159,8 +159,8 @@ https:\/\/cccat\.io url script-request-header https://raw.githubusercontent.com/
 0 9 * * * https://raw.githubusercontent.com/whyour/hundun/master/quanx/jdzz.js, tag=京东赚赚, img-url=https://raw.githubusercontent.com/Orz-3/task/master/jd.png, enabled=true
 10 * * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_dreamFactory.js, tag=京喜工厂, img-url=https://raw.githubusercontent.com/Orz-3/task/master/jd.png, enabled=true
 15 */4 * * * https://raw.githubusercontent.com/whyour/hundun/master/quanx/jx_story.js, tag=京喜金牌厂长, img-url=https://raw.githubusercontent.com/58xinian/icon/master/jdgc.png, enabled=true
-10 7 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_syj.js, tag=京东十元街, img-url=https://raw.githubusercontent.com/Orz-3/task/master/jd.png, enabled=true,script-update-interval=0
-10 * * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_jdfactory.js, tag=京东工厂, img-url=https://raw.githubusercontent.com/Orz-3/task/master/jd.png, enabled=true,script-update-interval=0
+10 7 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_syj.js, tag=京东十元街, img-url=https://raw.githubusercontent.com/Orz-3/task/master/jd.png, enabled=true
+10 * * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_jdfactory.js, tag=京东工厂, img-url=https://raw.githubusercontent.com/Orz-3/task/master/jd.png, enabled=true
 16 0 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_small_home.js, tag=东东小窝, img-url=https://raw.githubusercontent.com/58xinian/icon/master/ddxw.png  enabled=true
 10 0,20 * * * https://raw.githubusercontent.com/lxk0301/jd_scripts/master/jd_necklace.js, tag=点点券, enabled=true
 5 0 * * * https://raw.githubusercontent.com/toulanboy/scripts/master/jd_price_detect/jd_price_detect.js, tag=京东价格提醒, img-url=https://raw.githubusercontent.com/Orz-3/task/master/jd.png,enabled=true
