--- a/w37fhy_diy.conf
+++ b/w37fhy_diy.conf
@@ -31,6 +31,7 @@ static=🐟 漏网之鱼, 🚀 节点选择, ♻️ 自动选择, DIRECT, img-ur
 [server_remote]
 
 [filter_remote]
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/QuantumultX/NetEaseMusic/NetEaseMusic.list, tag=🙈 网易云音乐, enabled=true
 # Unbreak 后续规则修正
 https://raw.githubusercontent.com/DivineEngine/Profiles/master/Quantumult/Filter/Unbreak.list, tag=🎯 全球直连, enabled=true
 # Advertising 广告
