--- a/QuantumultX_diy.conf
+++ b/QuantumultX_diy.conf
@@ -65,7 +65,8 @@ https://raw.githubusercontent.com/w37fhy/QuantumultX/master/QuantumultX_JS.conf,
 https://raw.githubusercontent.com/w37fhy/QuantumultX/master/QuantumultX_Cookie.conf, tag=获取Cookie, update-interval=86400, opt-parser=false, enabled=true
 
 [server_local]
-
+#解锁网易云音乐节点
+http=106.52.127.72:19951, fast-open=false, udp-relay=false, tag= 解锁节点一
 [filter_local]
 host-suffix, local, direct
 ip-cidr, 192.168.0.0/16, direct
